<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Office Alarms</string>
    <string name="action_reset">Reset data</string>
    <string name="action_settings">Settings</string>
    <string name="settings_title">SOA Settings</string>
    <string name="shortcut_name">Clear Cache Shortcut</string>
    
    <!-- settings -->
    <string name="pc_clean_title">Cleaning alert</string>
    <string name="pc_lunch_title">Lunch alerts</string>
    <string name="pd_dayset_title">Work hours per day</string>
    <string name="pd_wifibt_title">Home WiFi</string>
    <string name="pd_wifiset_title">Office WiFi</string>
    <string name="pk_clday_title">Cleaning day</string>
    <string name="pk_cltim_title">Cleaning time</string>
    <string name="pk_lstart_title">Lunch time begin</string>
    <string name="pk_lstop_title">Lunch time end</string>
    <string name="pk_lunch_title">Alerts at lunch time begin-end</string>
    <string name="pk_round_summ">8:56 becomes 8:55, 9:03 becomes 9:00 etc</string>
    <string name="pk_round_title">Round at nearest 5 minutes</string>
    
    <!-- labels -->
    <string name="txt_empty"/>
    <string name="txt_hours">ore</string>
    <string name="lbl_arrival">Arrival:</string>
    <string name="lbl_leaving">Leave at:</string>
    <string name="lbl_tmpleft">Actual left:</string>
    <string name="lbl_debug">DEBUG</string>
    <string name="lbl_tscan">Last scan:</string>
    <string name="lbl_lscan">Found WIFIs:</string>
    <string name="lbl_dtext">Last note:</string>
    <string name="dlg_btn_ok">OK</string>
    <string name="dlg_btn_cancel">Cancel</string>
    
    <!-- messages -->
    <string name="msg_wifi_off">WiFi is currently disabled</string>
    <string name="msg_wifi_scan">Scanning for WiFi networks</string>
    <string name="msg_bt_off">Bluetooth is currently disabled</string>
    <string name="msg_house_title">You are at home</string>
    <string name="msg_roamn_title">You are roaming</string>
    <string name="msg_enter_title">You are at work!</string>
    <string name="msg_enter_text">Time to go home: </string>
    <string name="msg_leave_title">Go home!</string>
    <string name="msg_leave_text">Time to go home: </string>
    <string name="msg_blunc_title">Go to lunch!</string>
    <string name="msg_blunc_text">Lunch time started</string>
    <string name="msg_elunc_title">Get back to work!</string>
    <string name="msg_elunc_text">Lunch time ended</string>
    <string name="msg_clean_title">Pulizie!</string>
    <string name="msg_clean_text">Alle 18 è cleaning time</string>
    
    <!-- sample texts -->
    <string name="test_time">22:58</string>
    <string name="test_date">mer 20 nov</string>
    <string name="test_alarm">mer 22:58</string>
    <string name="test_day">mercoledì</string>
    <string name="test_wifi">ds9h0dvndsavad</string>
    <string name="test_boh">N/A</string>
    <string name="test_netw">Bafangule</string>
    <string name="test_voldn">volume -</string>
    <string name="test_volup">volume +</string>
    <string name="test_cache">cache</string>
    <string name="test_place">via Come Si Chiama 99, 99999 Città PR</string>
    <string name="add_widget">Add widget</string>

</resources>