<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/appwidget_bg"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:id="@+id/box_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        android:paddingRight="10dp"
        android:paddingTop="4dp"
        android:paddingLeft="2dp">

        <TextView
            android:id="@+id/txt_arrival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/txt_empty"
            android:drawableLeft="@drawable/ic_static_enter"
            android:gravity="left|center_vertical"
            android:text="@string/test_time"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/tertiary_text_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_leaving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/txt_empty"
            android:drawableLeft="@drawable/ic_static_left"
            android:gravity="left|center_vertical"
            android:text="@string/test_boh"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/tertiary_text_dark"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/darker_gray"
        android:text="@string/txt_empty"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:id="@+id/box_center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="4dp"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/txt_empty"
                android:paddingTop="1dp"
                android:src="@drawable/ic_static_place" />

            <TextView
                android:id="@+id/txt_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="left|center_vertical"
                android:lines="2"
                android:text="@string/test_place"
                android:textColor="@android:color/secondary_text_dark"
                android:paddingLeft="2dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_network"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_static_wifi"
            android:drawablePadding="2dp"
            android:ellipsize="end"
            android:gravity="left|center_vertical"
            android:lines="1"
            android:paddingTop="1dp"
            android:text="@string/test_netw"
            android:textColor="@android:color/tertiary_text_dark" />
    </LinearLayout>

    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/darker_gray"
        android:text="@string/txt_empty"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:divider="@drawable/divider_empty"
        android:orientation="vertical"
        android:paddingBottom="7dp"
        android:paddingLeft="7dp"
        android:paddingTop="4dp"
        android:showDividers="middle"
        android:paddingRight="6dp">

        <TextView
            android:id="@+id/txt_volup"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/test_volup"
            android:textColor="@android:color/primary_text_dark" />

        <TextView
            android:id="@+id/txt_voldn"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/test_voldn"
            android:textColor="@android:color/primary_text_dark" />

    </LinearLayout>

</LinearLayout>